fix: 여행일정 추가 버그고침